# duckdb-httpfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: IntegrationTests.yml  Linux.yml  MainDistributionPipeline.yml  MinioTests.yml
extension/httpfs/: create_secret_functions.cpp  crypto.cpp  httpfs.cpp  httpfs_client.cpp  httpfs_client_wasm.cpp  httpfs_curl_client.cpp  httpfs_extension.cpp  httpfs_httplib_client.cpp  s3_multi_part_upload.cpp  s3fs.cpp
extension/httpfs/include/: create_secret_functions.hpp  crypto.hpp  http_metadata_cache.hpp  httpfs.hpp  httpfs_client.hpp  httpfs_curl_client.hpp  s3_multi_part_upload.hpp  s3fs.hpp
scripts/: generate_presigned_url.sh  minio_s3.yml  run_s3_test_server.sh  test_refresh_get_range.sh
src/: CMakeLists.txt  create_secret_functions.cpp  crypto.cpp  hffs.cpp  http_state.cpp  httpfs.cpp  httpfs_cached_httplib_client.cpp  httpfs_config.py  httpfs_connection_caching.cpp  httpfs_connection_caching_client.cpp  httpfs_curl_client.cpp  httpfs_extension.cpp  httpfs_functions.cpp  httpfs_httplib_client.cpp  s3_multi_part_upload.cpp  s3fs.cpp  webdavfs.cpp
src/include/: create_secret_functions.hpp  crypto.hpp  hffs.hpp  http_metadata_cache.hpp  http_state.hpp  httpfs.hpp  httpfs_client.hpp  httpfs_curl_client.hpp  httpfs_extension.hpp  httpfs_functions.hpp  lru_cache.hpp  s3_multi_part_upload.hpp  s3fs.hpp  webdavfs.hpp
test/: README.md
test/configs/: duckdb-tests.json
test/extension/: autoloading_base.test  autoloading_current_setting.test  autoloading_filesystems.test  autoloading_load_only.test  autoloading_reset_setting.test  duckdb_extension_settings.test
test/sql/: connection_caching.test  connection_caching_default.test  connection_caching_disable.test  full_file_download_fallback.test  metadata_stats.test  test_headers_parsed.test  test_inherit_from_env.test  test_read_public_bucket.test  test_region_errors.test  test_region_shenanigans.test  tmp.test
test/sql/attach/: attach_httpfs.test  attach_s3.test  attach_s3_tpch.test_slow
test/sql/copy/: no_head_on_write.test  test_remote_head_forbidden.test
test/sql/crypto/: test_openssl_crypto.test
test/sql/curl_client/: missing_url_issue.test  test_get_with_body.test  test_load_other_extensions.test  test_relative_path_parsing.test
(+106 files in other folders)
